poc/kubeflow-auth/kustomize/dex/overlays/istio/virtual-service.yaml
# This config is gated on kiali upgrade to 0.21 from 0.16 in istio 1.1.6:
# https://github.com/kiali/kiali/issues/1154
# https://github.com/istio/istio/issues/11131

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dex
spec:
  gateways:
  - default/bookinfo-gateway
  hosts:
  - 'dex.localhost.local'
  http:
  - route:
    - destination:
        host: dex.$(namespace).svc.cluster.local
        port:
          number: 5556
